src/test/resources/failing/fail93.pnd
@Type Animal
Animal(x) : int
